Add openTCS 4.3 (2017-06-30):
* Introduced configuration based on binding interfaces and cfg4j to
  provide implementations for these, and deprecated the previously used
  configuration classes. Implications and side effects:
  * Made documentation of configuration entries (for users) easy via
    annotations.
  * Switched configuration files from XML to properties.
  * Switched to read-only configuration.
* Improved maintainability and reusability of the default dispatcher
  implementation.
* Updated Gradle wrapper to 3.5.
* Many small bugfixes and improvements.

Co-authored-by: Martin Grzenia <martin.grzenia@iml.fraunhofer.de>
Co-authored-by: Mats Wilhelm <mats.wilhelm@iml.fraunhofer.de>
Co-authored-by: Mustafa Yalciner <mustafa.yalciner@iml.fraunhofer.de>